--- a/autosql-master/SqlReflect/SqlReflect.csproj
+++ b/autosql-master/SqlReflect/SqlReflect.csproj
@@ -41,7 +41,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractDataMapper.cs" />
+    <Compile Include="Cache.cs" />
     <Compile Include="IDataMapper.cs" />
+    <Compile Include="Queries.cs" />
     <Compile Include="ReflectDataMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Attributes\PK.cs" />
